# streamlit-auth-demo

./: pyproject.toml
src/app/: main.py
src/app/auth/: auth_util.py  preprocess.py
src/app/data/: config.yaml  userinfo.csv
src/app/pages/: user_login.py  user_register.py
